# ChangeLog for www-client/kazehakase
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/kazehakase/ChangeLog,v 1.12 2005/06/07 20:16:57 nakano Exp $

  07 Jun 2005; Masatomo Nakano <nakano@gentoo.org> kazehakase-0.2.7.ebuild:
  Marked stable on x86

  09 May 2005; Masatomo Nakano <nakano@gentoo.org> kazehakase-0.2.6.ebuild:
  Marked stable on x86/ppc.

*kazehakase-0.2.7 (29 Apr 2005)

  29 Apr 2005; Masatomo Nakano <nakano@gentoo.org> +kazehakase-0.2.7.ebuild:
  Version bump.

  08 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  kazehakase-0.2.5.ebuild:
  Stable on ppc.

  08 Apr 2005; Masatomo Nakano <nakano@gentoo.org>
  +files/kazehakase-0.2.6-gentoo-2.patch, kazehakase-0.2.6.ebuild:
  Added patch to fix compile error without firefox.

*kazehakase-0.2.6 (29 Mar 2005)

  29 Mar 2005; Masatomo Nakano <nakano@gentoo.org>
  +files/kazehakase-0.2.6-gentoo.patch, +kazehakase-0.2.6.ebuild:
  Version bump.

  25 Mar 2005; Masatomo Nakano <nakano@gentoo.org> kazehakase-0.2.5.ebuild:
  Removed !kazehakase-cvs dependency since conflict problem has been removed.

  25 Mar 2005; Masatomo Nakano <nakano@gentoo.org>
  +files/kazehakase-0.2.5-gentoo.patch, kazehakase-0.2.5.ebuild:
  fixed for mozilla-1.7.6

  24 Mar 2005; Masatomo Nakano <nakano@gentoo.org> -kazehakase-0.2.1.ebuild,
  -kazehakase-0.2.3.ebuild, -kazehakase-0.2.4.ebuild:
  Removed old ebuilds.

  23 Mar 2005; Seemant Kulleen <seemant@gentoo.org> kazehakase-0.2.1.ebuild,
  kazehakase-0.2.2.ebuild, kazehakase-0.2.3.ebuild, kazehakase-0.2.4.ebuild,
  kazehakase-0.2.5.ebuild:
  change dep from net-www/mozilla to www-client/mozilla

*kazehakase-0.2.5 (18 Mar 2005)
*kazehakase-0.2.4 (18 Mar 2005)
*kazehakase-0.2.3 (18 Mar 2005)
*kazehakase-0.2.2 (18 Mar 2005)
*kazehakase-0.2.1 (18 Mar 2005)

  18 Mar 2005; Seemant Kulleen <seemant@gentoo.org> +metadata.xml,
  +kazehakase-0.2.1.ebuild, +kazehakase-0.2.2.ebuild,