@@ -1,6 +1,7 @@
 MD5 18159d1accde6e8cd61d21db122b84cd kazehakase-0.2.6.ebuild 2164
+MD5 587d77a639148767f762ff4982d43cf3 kazehakase-0.2.8.ebuild 2087
 MD5 a52ae535155fe15106e9b723fdcc2986 kazehakase-0.2.5.ebuild 1965
-MD5 0013eb1b5cdb10ec612ad5825cf568b7 ChangeLog 7958
+MD5 0d840b3eab19145789e2a6f5c04ef817 ChangeLog 8085
 MD5 b6a70dc606d1eae980c96b5e81dd1e1b metadata.xml 249
 MD5 3e9620a289dde6cc02c8373b4c6bdb90 kazehakase-0.2.7.ebuild 2086
 MD5 a1fae24dfd959af21c60cbaf95580fe6 kazehakase-0.2.2.ebuild 1836
@@ -11,3 +12,4 @@ MD5 b026b5cb6160fd770e75dfb0b7204832 files/digest-kazehakase-0.2.2 69
 MD5 6dacb4f30250e43927601ae6f0a5fbf3 files/digest-kazehakase-0.2.5 69
 MD5 0d82ac1802697bb711d34a8344336e0b files/digest-kazehakase-0.2.6 69
 MD5 c9c3e64766f1c379b0c924c33a8a210b files/digest-kazehakase-0.2.7 69
+MD5 b5927d8002458871b7086b0723940eac files/digest-kazehakase-0.2.8 69
