@@ -1,0 +1,1 @@
+MD5 f7d59ee5976b6f3b4ea398e21f9ce3e0 kazehakase-0.2.8.tar.gz 1209861
