@@ -1,6 +1,11 @@
 # ChangeLog for www-client/kazehakase
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/kazehakase/ChangeLog,v 1.12 2005/06/07 20:16:57 nakano Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/kazehakase/ChangeLog,v 1.13 2005/07/01 12:17:13 nakano Exp $
+
+*kazehakase-0.2.8 (01 Jul 2005)
+
+  01 Jul 2005; Masatomo Nakano <nakano@gentoo.org> +kazehakase-0.2.8.ebuild:
+  Version bump.
 
   07 Jun 2005; Masatomo Nakano <nakano@gentoo.org> kazehakase-0.2.7.ebuild:
   Marked stable on x86
